--- a/MHAuthorWebsite/MHAuthorWebsite.Web/wwwroot/css/input-form.css
+++ b/MHAuthorWebsite/MHAuthorWebsite.Web/wwwroot/css/input-form.css
@@ -7,7 +7,6 @@
   padding: 5rem 6rem;
   width: 35%;
   max-width: 50%;
-  align-items: center;
 }
 
 .modal {
@@ -23,7 +22,6 @@
 
 .input-form {
   font-size: 1.9rem;
-  align-items: center;
   width: 95%;
 }
 
@@ -32,6 +30,7 @@
   padding: 0.5rem 1.5rem;
   border: 0.15rem solid var(--color-secondary);
   background-color: var(--color-primary);
+  width: 100%;
 }
 
 .input-form textarea.form-input {
@@ -50,9 +49,14 @@
   letter-spacing: 0.15rem;
 }
 
-.input-form .form-input-box {
+.input-form .form-input-box,
+.input-form .form-box {
   margin-top: 1rem;
   width: 100%;
+}
+
+.input-form .form-input-box {
+  align-items: flex-start;
 }
 
 .input-form .form-input-box.select-list,
@@ -95,6 +99,7 @@
   border-radius: 1.5rem;
   padding: 0.6rem 1.5rem;
   font-size: 2.1rem;
+  margin-top: 1.5rem;
 }
 
 .submit-btn:hover {
